# AzureAgent

./: .gitignore  README.md  TODO.md  generate_report.py  requirements.txt  run.ps1  ~$azqr_action_plan_2026_03_16_T084304.xlsx
.github/agents/: BuildAgent.agent.md  SpecAgent.agent.md  azuredeploy_agent_instructions.md
.github/skills/spa-entraauth-skill/: SKILL.md
af_fastapi/: .env.azure_ops  Dockerfile  azure_ops_agent.py  azure_ops_api.py  azure_ops_auth.py  azure_ops_mcp_client.py  azure_ops_orchestrator.py  azure_ops_sse_bus.py  pyproject.toml  test_azure_ops.http
azd_deploy/: azure.yaml
azd_deploy/hooks/: postprovision.ps1  postprovision.sh  preprovision.ps1  preprovision.sh
azd_deploy/infra/: main.bicep  main.parameters.json
azure-agent-spa/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
azure-agent-spa/public/: index.html
azure-agent-spa/src/: App.css  App.js  authConfig.js  index.css  setupProxy.js
docs/: Azure_Governance_Agent_Use_Cases.docx  Azure_Governance_Agent_Use_Cases_v2.docx  generate_governance_deck.py  sample_report.html
extra/: azqr_action_plan_2026_03_16_T084304.xlsx  azure_copilot_result.md  scan_unused.py  unused-resource-scanner.instructions.md  unused_resources_2026_03_16_T131746.html
mcp_server/: Dockerfile  README.md  azure_auth.py  azure_ops_mcp_server.py  cost_tools.py  email_tools.py  monitoring_tools.py  policy_tools.py  pyproject.toml  quota_tools.py  report_store.py  report_tools.py  resource_graph_tools.py  resource_tools.py  support_tools.py
